--- a/src/publicPage/about.html
+++ b/src/publicPage/about.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/favicon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="../images/favicon.png" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="about.css" />
     <title>Techvent</title>
   </head>
   <body>
     <div class="navbar">
       <div class="navLeft">
-        <img src="images/favicon.png" alt="logo" id="logo" />
-        <div class="navItem"><a href="index.html">Home</a></div>
-        <div class="navItem"><a href="search.html">Search</a></div>
+        <img src="../images/favicon.png" alt="logo" id="logo" />
+        <div class="navItem"><a href="../index.html">Home</a></div>
+        <div class="navItem"><a href="../search.php">Search</a></div>
         <div class="navItem">
-          <a href="seminarForm.html">Booking</a>
+          <a href="../seminarForm.php">Booking</a>
           <ul class="subMenu">
-            <li><a href="seminarForm.html" id="topItem">Seminar</a></li>
-            <li><a href="privateEventForm.html">Private Event</a></li>
+            <li><a href="../seminarForm.php" id="topItem">Seminar</a></li>
+            <li><a href="../privateEventForm.php">Private Event</a></li>
           </ul>
         </div>
         <div class="navItem"><a href="about.html">About</a></div>
@@ -85,35 +85,35 @@
       </div>
     </div>
     <div class="image-container">
-      <img src="images/img1.jpg" class="animated-image" />
-      <img src="images/img2.jpg" class="animated-image" />
-      <img src="images/img3.jpg" class="animated-image" />
-      <img src="images/img4.jpg" class="animated-image" />
-      <img src="images/img5.jpg" class="animated-image" />
+      <img src="../images/img1.jpg" class="animated-image" />
+      <img src="../images/img2.jpg" class="animated-image" />
+      <img src="../images/img3.jpg" class="animated-image" />
+      <img src="../images/img4.jpg" class="animated-image" />
+      <img src="../images/img5.jpg" class="animated-image" />
     </div>
 
-    <div class="centered-text">
+    <div class="centered-text" style="padding: 10px;">
       <h1 class="orange-text">Meet Our Team's Members</h1>
     </div>
 
     <div class="tree">
       <ul>
         <li>
-          <a href="#"><img src="images/josh.png" />Product Owner</a>
+          <a href="#"><img src="../images/josh.png" />Product Owner</a>
           <ul>
             <li>
-              <a href="#"><img src="images/eugene.jpg" />Scrum Master</a>
+              <a href="#"><img src="../images/eugene.jpg" />Scrum Master</a>
               <ul>
                 <li>
-                  <a href="#"><img src="images/iwa.jpg" />Software Developer</a>
+                  <a href="#"><img src="../images/iwa.jpg" />Software Developer</a>
                 </li>
               </ul>
             </li>
             <li>
-              <a href="#"><img src="images/zaty.jpg" />Business Analyst</a>
+              <a href="#"><img src="../images/zaty.jpg" />Business Analyst</a>
             </li>
             <li>
-              <a href="#"><img src="images/jeff.png" />UX/UI developer</a>
+              <a href="#"><img src="../images/jeff.png" />UX/UI developer</a>
             </li>
           </ul>
         </li>
@@ -131,9 +131,45 @@
         allowfullscreen
       ></iframe>
     </div>
+    <h1 class="orange-text"> <strong>BUSINESS NEWS </strong> </h1>
+      <p class="white-text"> Want to see news for event that we had organised? <strong> SEE </strong> below for more info!</p>
+
+      <div class="containerNews">
+      <div class="column2" style="background-image: url('../images/4thEvent.png');">
+        <a href="https://www.ireitic.com/"></a>
+        <div class="overlay">
+          <h2>5th Innovative Research in Engineering and Information Technology International Conference</h2>
+        </div>
+      </div>
+      <div class="column2" style="background-image: url('../images/putrajaya.jpg');">
+        <div class="overlay">
+          <h2>16TH Putrajaya International Conferences on Children, Women, and Elderly with Disabilities 2023: Online Conference</h2>
+        </div>
+      </div>
+      <div class="column2" style="background-image: url('../images/bursa.jpg');">
+        <div class="overlay">
+          <h2>From Idea to Execution- Building Your Own Futures Trading Strategy with AI</h2>
+        </div>
+      </div>
+      <div class="column2" style="background-image: url('../images/life.jpg');">
+        <div class="overlay">
+          <h2>LifeGen Service</h2>
+        </div>
+      </div>
+      <div class="column2" style="background-image: url('../images/ecommerce.jpg');">
+        <div class="overlay">
+          <h2>eCommerce Marketplace Summit 2023</h2>
+        </div>
+      </div>
+      <div class="column2" style="background-image: url('../images/gig.jpg');">
+        <div class="overlay">
+          <h2>Gig Fest & De Conference</h2>
+        </div>
+      </div>
+      </div>
     <footer>
       <p>&copy; 2023 Techvent. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="changeIcon.js"></script>
   </body>
 </html>
